# OllamaOne

./: README.md  package.json  pnpm-lock.yaml  quasar.config.js
docs/: index.md
docs/.vitepress/: config.mts
public/: splashscreen.html  webworker.js
src-tauri/: .env  Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/entity/src/: chat.rs  config.rs  lib.rs  prelude.rs
src-tauri/icons/: icon.icns
src-tauri/migration/src/: lib.rs  m20240319_033338_create_config_table.rs  m20240319_033620_create_chat_table.rs
src-tauri/service/src/: chat_mutation.rs  chat_query.rs  config_mutation.rs  config_query.rs  lib.rs
src-tauri/src/: app_config.rs  fetch.rs  main.rs
src/boot/: arco-design.js  dark.js  i18n.js  quasar-lang-pack.js
src/components/: EssentialLink.vue
src/i18n/: index.js
src/i18n/en-US/: index.js
src/i18n/ja/: index.js
src/i18n/zh-CN/: index.js
src/i18n/zh-TW/: index.js
src/layouts/: MainLayout.vue
src/pages/: ChatPage.vue  IndexPage.vue  ModelsPage.vue  SettingsPage.vue  py-worker.js  service.js
src/router/: routes.js
src/service/: chat.js  config.js  crawler.js  models.js
src/utils/: format.js
