[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "=2.0.0-beta.10", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "=2.0.0-beta.13", features = [] }
window-shadows = "0.2.1"
machine-uid = "0.3.0"
mac_address = "1.1.4"
sha2 = "0.10.6"
md-5 = "0.10.5"
tiktoken-rs = "0.5.6"
lazy_static = "1.4.0"
bollard = "0.15.0"
futures-util = "0.3"
tokio = { version = "1.29.0", features = ["full"] }
anyhow = "1.0.71"
dotenvy = "0.15.7"
debug_print = "1.0.0"
reqwest = { version = "0.11", features = ["json"] }
once_cell = "1.17.1"
parking_lot = "0.12.1"
# chromiumoxide = "0.5.7"
regex = "1.10.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
migration = { path = "./migration" }
service = { path = "./service" }
entity = { path = "./entity" }
tauri-plugin-clipboard-manager = "2.0.0-beta.2"
tauri-plugin-shell = "2.0.0-beta.2"
tauri-plugin-http = "2.0.0-beta.2"
tauri-plugin-fs = "2.0.0-beta.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[workspace]
members = [".", "service", "entity", "migration"]
